# chameleon

./: PROJECT_STRUCTURE.md  README.md  chameleon.ino  logs.txt  platformio.ini
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: release.yml  tests.yml
cli/: pyproject.toml
cli/src/: cli.py
docs/: CALIBRATION.md  LIBRARIES.md  QUICK_START.md  TECHNICAL_SPECS.md
include/: pixy_config.h
src/: Chameleon.cpp  Chameleon.h  main.ino  pixy_ball_detector.ino
src/actuators/arduino/: Servo.h
src/constants/: Pixy.h
src/controllers/: PixyController.cpp  PixyController.h
src/controllers/actuators/: MotorController.cpp  MotorController.h  ServoController.cpp  ServoController.h
src/controllers/main/: Chameleon.cpp  Chameleon.h
src/controllers/sensors/: PixyController.cpp  PixyController.h  UltraSonicController.cpp  UltraSonicController.h
src/helpers/interfaces/: ILogger.h
src/helpers/logging/: BluetoothLogger.h  SerialLogger.h
src/main/: Chameleon.cpp  Chameleon.h
src/sensors/: IPixySensor.h  PixySensor.cpp  PixySensor.h
src/sensors/arduino/: PixySensor.cpp  PixySensor.h  UltraSonicSensor.cpp  UltraSonicSensor.h
src/sensors/interfaces/: IPixySensor.h  IUltraSonicSensor.h
src/sensors/mocks/: MockPixySensor.cpp  MockPixySensor.h
src/types/: Block.h  Codes.h  State.h
test/: pixy_ball_detector.ino  test_PixyController.cpp
test/mocks/: MockPixySensor.cpp  MockPixySensor.h
