[project]
name = "cli"
version = "0.1.0"
description = ""
authors = [
    {name = "cesarhuret",email = "67405604+cesarhuret@users.noreply.github.com"}
]
requires-python = ">=3.13"
dependencies = [
    "pyserial (>=3.5,<4.0)",
    "prompt-toolkit (>=3.0.52,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
